update to Quarkus 3.31.1